packages/kubernetes/simple-pod/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: djobi
  labels:
    app.kubernetes.io/part-of: data-lake
    app.kubernetes.io/name: djobi
spec:
  restartPolicy: Never
  containers:
  - name: djobi
    image: ghcr.io/datatok/djobi:v6.0.0
    args:
    - djobi
    - --driver-cores=1
    - --executor-instances=1
    - --support-elasticsearch=8
    - --log-level=debug
    - /usr/share/djobi/workflow --arg date=yesterday
    resources:
      limits:
        cpu: '2'
        memory: 1Gi
      requests:
        cpu: 250m
        memory: 512Mi
    securityContext:
      capabilities:
        drop:
          - ALL
      runAsUser: 1000
      runAsNonRoot: true
      readOnlyRootFilesystem: true
      allowPrivilegeEscalation: false
    volumeMounts:
    - name: djobi-config
      mountPath: /usr/share/djobi/config/config.conf
      subPath: config.conf
    - name: djobi-workflow
      mountPath: /usr/share/djobi/workflow
    - name: tmp
      mountPath: /tmp
  securityContext:
    fsGroup: 1000
  volumes:
  - name: tmp
    emptyDir: {}
  - name: djobi-config
    configMap:
      name: djobi
      defaultMode: 420
  - name: djobi-workflow
    configMap:
      name: djobi-workflow-test
      defaultMode: 420
