packages/kubernetes/simple-pod/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: djobi
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: djobi
  ingress:
    - ports:
        - protocol: TCP
          port: 4040
        - protocol: TCP
          port: 8080
  egress:
    - ports:
        - protocol: TCP
          port: 9200
  policyTypes:
    - Ingress
    - Egress
